--- a/res/xml/statusbar_tab.xml
+++ b/res/xml/statusbar_tab.xml
@@ -23,4 +23,11 @@
     android:title="@string/double_tap_to_sleep_title"
     android:summary="@string/double_tap_to_sleep_summary"
     android:defaultValue="false" />
+
+  <com.citrus.settings.preference.SystemSettingSwitchPreference
+    android:key="status_bar_brightness_control"
+    android:title="@string/status_bar_toggle_brightness"
+    android:summary="@string/status_bar_toggle_brightness_summary"
+    android:defaultValue="false" />
+
 </PreferenceScreen>
